force-app/main/default/objects/Account/fields/Academic_Calendar_Type__c.field-meta.xml
<CustomField>
    <fullName>Academic_Calendar_Type__c</fullName>
    <description>The primary academic calendar structure of the institution.</description>
    <label>Academic Calendar Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Semesters</fullName>
            </value>
            <value>
                <fullName>Quarters</fullName>
            </value>
            <value>
                <fullName>Trimesters</fullName>
            </value>
            <value>
                <fullName>Rolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>