force-app/main/default/objects/Account/fields/Acceptance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Rate__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Acceptance Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>