force-app/main/default/objects/Account/fields/Accessibility_WCAG_Level__c.field-meta.xml
<CustomField>
    <fullName>Accessibility_WCAG_Level__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Accessibility WCAG Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>