force-app/main/default/objects/Account/fields/Accreditation_Status__c.field-meta.xml
<CustomField>
    <fullName>Accreditation_Status__c</fullName>
    <description>The accreditation status of the educational institution.</description>
    <label>Accreditation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully Accredited</fullName>
            </value>
            <value>
                <fullName>Provisional</fullName>
            </value>
            <value>
                <fullName>Unaccredited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>