force-app/main/default/objects/Account/fields/AICC_Support__c.field-meta.xml
<CustomField>
    <fullName>AICC_Support__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>AICC Support</label>
    <length>255</length>
    <type>Text</type>
</CustomField>