force-app/main/default/objects/Account/fields/Alumni_Network_Size__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Network_Size__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Alumni Network Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>