force-app/main/default/objects/Account/fields/Annual_Revenue_Mil__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Mil__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Annual Revenue Mil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>