force-app/main/default/objects/Account/fields/API_Access_Provided__c.field-meta.xml
<CustomField>
    <fullName>API_Access_Provided__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>API Access Provided</label>
    <length>255</length>
    <type>Text</type>
</CustomField>