force-app/main/default/objects/Account/fields/Athletic_Conference__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Conference__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Athletic Conference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>