force-app/main/default/objects/Account/fields/Auditing_Firm__c.field-meta.xml
<CustomField>
    <fullName>Auditing_Firm__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Auditing Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>