force-app/main/default/objects/Account/fields/Average_Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Average_Class_Size__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Class Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>