force-app/main/default/objects/Account/fields/Average_Course_Duration__c.field-meta.xml
<CustomField>
    <fullName>Average_Course_Duration__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Course Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>