force-app/main/default/objects/Account/fields/Average_Employee_Tenure__c.field-meta.xml
<CustomField>
    <fullName>Average_Employee_Tenure__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Employee Tenure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>