force-app/main/default/objects/Account/fields/Average_Instructor_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Instructor_Rating__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Instructor Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>