force-app/main/default/objects/Account/fields/Average_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Average_Response_Time__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Response Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>