force-app/main/default/objects/Account/fields/Average_Scholarship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Average_Scholarship_Amount__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Scholarship Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>