force-app/main/default/objects/Account/fields/Average_Starting_Salary__c.field-meta.xml
<CustomField>
    <fullName>Average_Starting_Salary__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Average Starting Salary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>