force-app/main/default/objects/Account/fields/B2B_or_B2C__c.field-meta.xml
<CustomField>
    <fullName>B2B_or_B2C__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>B2B or B2C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>