force-app/main/default/objects/Account/fields/Backup_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Backup_Frequency__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Backup Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>