force-app/main/default/objects/Account/fields/Bandwidth_Limit_TB__c.field-meta.xml
<CustomField>
    <fullName>Bandwidth_Limit_TB__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Bandwidth Limit TB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>