force-app/main/default/objects/Account/fields/Campus_Security_Type__c.field-meta.xml
<CustomField>
    <fullName>Campus_Security_Type__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Campus Security Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>