force-app/main/default/objects/Account/fields/Campus_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Campus_Size_Acres__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Campus Size Acres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>