force-app/main/default/objects/Account/fields/Carbon_Footprint__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Footprint__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Carbon Footprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>