force-app/main/default/objects/Account/fields/Certification_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Certification_Issuance__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Certification Issuance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>