force-app/main/default/objects/Account/fields/Cloud_Infrastructure_Provider__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Infrastructure_Provider__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Cloud Infrastructure Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>