force-app/main/default/objects/Account/fields/Compliance_Frameworks__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Frameworks__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Compliance Frameworks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>