force-app/main/default/objects/Account/fields/Computer_Labs_Count__c.field-meta.xml
<CustomField>
    <fullName>Computer_Labs_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Computer Labs Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>