force-app/main/default/objects/Account/fields/Concurrent_User_Limit__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_User_Limit__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Concurrent User Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>