force-app/main/default/objects/Account/fields/Content_Licensing_Model__c.field-meta.xml
<CustomField>
    <fullName>Content_Licensing_Model__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Content Licensing Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>