force-app/main/default/objects/Account/fields/Content_Localization_Options__c.field-meta.xml
<CustomField>
    <fullName>Content_Localization_Options__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Content Localization Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>