force-app/main/default/objects/Account/fields/Content_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Content_Specialty__c</fullName>
    <description>The specialty area of the training provider.</description>
    <label>Content Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IT Certification</fullName>
            </value>
            <value>
                <fullName>Soft Skills</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Technical Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>