force-app/main/default/objects/Account/fields/Corporate_Industry__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Industry__c</fullName>
    <description>The primary industry of the corporate client.</description>
    <label>Corporate Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>