force-app/main/default/objects/Account/fields/Corporate_Social_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Social_Responsibility__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Corporate Social Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>