force-app/main/default/objects/Account/fields/Course_Update_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Course_Update_Frequency__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Course Update Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>