force-app/main/default/objects/Account/fields/CRM_System_Used__c.field-meta.xml
<CustomField>
    <fullName>CRM_System_Used__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>CRM System Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>