force-app/main/default/objects/Account/fields/Current_LMS_Platform__c.field-meta.xml
<CustomField>
    <fullName>Current_LMS_Platform__c</fullName>
    <description>The current or previous LMS platform used by the institution.</description>
    <label>Current LMS Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>Blackboard</fullName>
            </value>
            <value>
                <fullName>Moodle</fullName>
            </value>
            <value>
                <fullName>Google Classroom</fullName>
            </value>
            <value>
                <fullName>Other / None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>