force-app/main/default/objects/Account/fields/Custom_Branding_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Custom_Branding_Allowed__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Custom Branding Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>