force-app/main/default/objects/Account/fields/Customer_Satisfaction_Score__c.field-meta.xml
<CustomField>
    <fullName>Customer_Satisfaction_Score__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Customer Satisfaction Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>