force-app/main/default/objects/Account/fields/Data_Export_Formats__c.field-meta.xml
<CustomField>
    <fullName>Data_Export_Formats__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Data Export Formats</label>
    <length>255</length>
    <type>Text</type>
</CustomField>