force-app/main/default/objects/Account/fields/Data_Privacy_Officer__c.field-meta.xml
<CustomField>
    <fullName>Data_Privacy_Officer__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Data Privacy Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>