force-app/main/default/objects/Account/fields/Data_Retention_Policy__c.field-meta.xml
<CustomField>
    <fullName>Data_Retention_Policy__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Data Retention Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>