force-app/main/default/objects/Account/fields/Dedicated_Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Dedicated_Support_Tier__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Dedicated Support Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>