force-app/main/default/objects/Account/fields/Digital_Badges_Supported__c.field-meta.xml
<CustomField>
    <fullName>Digital_Badges_Supported__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Digital Badges Supported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>