force-app/main/default/objects/Account/fields/Dining_Halls_Count__c.field-meta.xml
<CustomField>
    <fullName>Dining_Halls_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Dining Halls Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>