force-app/main/default/objects/Account/fields/Disabled_Student_Services__c.field-meta.xml
<CustomField>
    <fullName>Disabled_Student_Services__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Disabled Student Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>