force-app/main/default/objects/Account/fields/Disaster_Recovery_Plan__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Recovery_Plan__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Disaster Recovery Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>