force-app/main/default/objects/Account/fields/Distance_Learning_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Distance_Learning_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Distance Learning Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>