force-app/main/default/objects/Account/fields/Diversity_Inclusion_Rating__c.field-meta.xml
<CustomField>
    <fullName>Diversity_Inclusion_Rating__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Diversity Inclusion Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>