force-app/main/default/objects/Account/fields/Dual_Enrollment_Available__c.field-meta.xml
<CustomField>
    <fullName>Dual_Enrollment_Available__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Dual Enrollment Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>