force-app/main/default/objects/Account/fields/Early_Admissions_Available__c.field-meta.xml
<CustomField>
    <fullName>Early_Admissions_Available__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Early Admissions Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>