force-app/main/default/objects/Account/fields/Employee_Resource_Groups__c.field-meta.xml
<CustomField>
    <fullName>Employee_Resource_Groups__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Employee Resource Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>