force-app/main/default/objects/Account/fields/Employee_Turnover_Rate__c.field-meta.xml
<CustomField>
    <fullName>Employee_Turnover_Rate__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Employee Turnover Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>