force-app/main/default/objects/Account/fields/ERP_System_Used__c.field-meta.xml
<CustomField>
    <fullName>ERP_System_Used__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>ERP System Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>