force-app/main/default/objects/Account/fields/FERPA_Compliance__c.field-meta.xml
<CustomField>
    <fullName>FERPA_Compliance__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>FERPA Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>