force-app/main/default/objects/Account/fields/Financial_Aid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Financial_Aid_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Financial Aid Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>