force-app/main/default/objects/Account/fields/Fiscal_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_End__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Fiscal Year End</label>
    <length>255</length>
    <type>Text</type>
</CustomField>