force-app/main/default/objects/Account/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Fleet Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>