force-app/main/default/objects/Account/fields/Fortune_500_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Fortune_500_Ranking__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Fortune 500 Ranking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>