force-app/main/default/objects/Account/fields/Founding_Year__c.field-meta.xml
<CustomField>
    <fullName>Founding_Year__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Founding Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>