force-app/main/default/objects/Account/fields/Fraternity_Sorority_Count__c.field-meta.xml
<CustomField>
    <fullName>Fraternity_Sorority_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Fraternity Sorority Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>