force-app/main/default/objects/Account/fields/Gamification_Features__c.field-meta.xml
<CustomField>
    <fullName>Gamification_Features__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Gamification Features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>