force-app/main/default/objects/Account/fields/GDPR_Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Compliance_Status__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>GDPR Compliance Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>