force-app/main/default/objects/Account/fields/Global_Headquarters__c.field-meta.xml
<CustomField>
    <fullName>Global_Headquarters__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Global Headquarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>