force-app/main/default/objects/Account/fields/Graduation_Rate__c.field-meta.xml
<CustomField>
    <fullName>Graduation_Rate__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Graduation Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>