force-app/main/default/objects/Account/fields/Green_Energy_Usage__c.field-meta.xml
<CustomField>
    <fullName>Green_Energy_Usage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Green Energy Usage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>