force-app/main/default/objects/Account/fields/HIPAA_Compliance__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Compliance__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>HIPAA Compliance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>