force-app/main/default/objects/Account/fields/HRIS_System_Used__c.field-meta.xml
<CustomField>
    <fullName>HRIS_System_Used__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>HRIS System Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>