force-app/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <description>The type of educational institution.</description>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High School</fullName>
            </value>
            <value>
                <fullName>University</fullName>
            </value>
            <value>
                <fullName>Community College</fullName>
            </value>
            <value>
                <fullName>Online Academy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>