force-app/main/default/objects/Account/fields/Instructor_Vetting_Process__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Vetting_Process__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Instructor Vetting Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>