force-app/main/default/objects/Account/fields/Interactive_Assessments__c.field-meta.xml
<CustomField>
    <fullName>Interactive_Assessments__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Interactive Assessments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>