force-app/main/default/objects/Account/fields/International_Student_Percentage__c.field-meta.xml
<CustomField>
    <fullName>International_Student_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>International Student Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>