force-app/main/default/objects/Account/fields/ISO_Certifications__c.field-meta.xml
<CustomField>
    <fullName>ISO_Certifications__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>ISO Certifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>