force-app/main/default/objects/Account/fields/IT_Support_Desk_Hours__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Desk_Hours__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>IT Support Desk Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>