force-app/main/default/objects/Account/fields/Key_Account_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Manager_Name__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Key Account Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>