force-app/main/default/objects/Account/fields/Key_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Key_Competitors__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Key Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>