force-app/main/default/objects/Account/fields/Leadership_Development_Program__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Development_Program__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Leadership Development Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>