force-app/main/default/objects/Account/fields/Lease_Expiration_Year__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration_Year__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Lease Expiration Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>