force-app/main/default/objects/Account/fields/Legal_Counsel_Firm__c.field-meta.xml
<CustomField>
    <fullName>Legal_Counsel_Firm__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Legal Counsel Firm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>