force-app/main/default/objects/Account/fields/Library_Resources_Count__c.field-meta.xml
<CustomField>
    <fullName>Library_Resources_Count__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Library Resources Count</label>
    <length>255</length>
    <type>Text</type>
</CustomField>