force-app/main/default/objects/Account/fields/LMS_Billing_Tier__c.field-meta.xml
<CustomField>
    <fullName>LMS_Billing_Tier__c</fullName>
    <description>The billing tier the client is subscribed to.</description>
    <label>LMS Billing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Unlimited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>