force-app/main/default/objects/Account/fields/LMS_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>LMS_Integration_Status__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>LMS Integration Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>