force-app/main/default/objects/Account/fields/LTI_Integration_Version__c.field-meta.xml
<CustomField>
    <fullName>LTI_Integration_Version__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>LTI Integration Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>