force-app/main/default/objects/Account/fields/Mandatory_Compliance_Hours__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_Compliance_Hours__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Mandatory Compliance Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>