force-app/main/default/objects/Account/fields/Market_Share_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Market_Share_Percentage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Market Share Percentage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>