force-app/main/default/objects/Account/fields/Mascot_Name__c.field-meta.xml
<CustomField>
    <fullName>Mascot_Name__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Mascot Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>