force-app/main/default/objects/Account/fields/Mental_Health_Counseling__c.field-meta.xml
<CustomField>
    <fullName>Mental_Health_Counseling__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Mental Health Counseling</label>
    <length>255</length>
    <type>Text</type>
</CustomField>