force-app/main/default/objects/Account/fields/Microlearning_Available__c.field-meta.xml
<CustomField>
    <fullName>Microlearning_Available__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Microlearning Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>