force-app/main/default/objects/Account/fields/Minimum_Commitment_Months__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Commitment_Months__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Minimum Commitment Months</label>
    <length>255</length>
    <type>Text</type>
</CustomField>