force-app/main/default/objects/Account/fields/Mobile_App_Available__c.field-meta.xml
<CustomField>
    <fullName>Mobile_App_Available__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Mobile App Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>