force-app/main/default/objects/Account/fields/Net_Promoter_Score__c.field-meta.xml
<CustomField>
    <fullName>Net_Promoter_Score__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Net Promoter Score</label>
    <length>255</length>
    <type>Text</type>
</CustomField>