force-app/main/default/objects/Account/fields/Number_of_Instructors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Instructors__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Number of Instructors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>