force-app/main/default/objects/Account/fields/Office_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Office_Square_Footage__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Office Square Footage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>