force-app/main/default/objects/Account/fields/Offline_Viewing_Supported__c.field-meta.xml
<CustomField>
    <fullName>Offline_Viewing_Supported__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>Offline Viewing Supported</label>
    <length>255</length>
    <type>Text</type>
</CustomField>