force-app/main/default/objects/Account/fields/On_Campus_Housing_Capacity__c.field-meta.xml
<CustomField>
    <fullName>On_Campus_Housing_Capacity__c</fullName>
    <description>Semantic field for LMS tracking.</description>
    <label>On Campus Housing Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>